--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: 'Looking Backwards, and Looking Forwards'
+title: 'Looking Forwards, and Looking Backwards'
 date: "2022-12-05T23:51:48Z"
 image: "/images/2022/12/IMG_9850.jpeg"
 thumbnail: "/images/2022/12/IMG_0207.jpeg"
@@ -21,19 +21,18 @@ It's nearly six years since link:/2017/03/10/time-for-a-change/[I wrote] one of 
 
 <!--more-->
 
-
 ## Looking Forwards
 
 image::/images/2022/12/ax.jpg[]
 
-I'm going to be joining https://lakefs.io/[*LakeFS*] in January as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. LakeFS is something I've link:/2022/09/14/data-engineering-in-2022-storage-and-access/#_git_for_data_with_lakefs[written about recently] (link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[twice]) and I'm excited to work with it and the surrounding data engineering ecosystem. How we as data engineers should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use is something that's interested me for a long time. Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool to integrate with source control] (https://www.youtube.com/watch?v=Kpbbb-pa2gU[video]), and I'm looking forward to taking a similar rigorous approach to the thing that's at the heart of everything we work with today: data. 
+I'm going to be joining https://lakefs.io/[*LakeFS*] in January as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. LakeFS is something I've link:/2022/09/14/data-engineering-in-2022-storage-and-access/#_git_for_data_with_lakefs[written about recently] (link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[twice]), and I'm excited to work with it and the surrounding data engineering ecosystem. How we as data engineers should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use is something that's interested me for a long time. Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool to integrate with source control] (https://www.youtube.com/watch?v=Kpbbb-pa2gU[video]), and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. 
 
 
 ## Looking Backwards 
 
-As one door opens, another closes - and I'm leaving Confluent with nothing but good feelings and positive vibes about the company. It's where I first officially became a Developer Advocate, as well as my first start up experience. 
+I'm leaving Confluent with nothing but positive vibes about the company—and quite a feeling of sadness since it's where I first officially became a Developer Advocate, as well as my first start-up experience. 
 
-In **March 2017** I joined Confluent's Business Development team as a _Partner Technology Evangelist_. In October of that year I spoke at Oracle OpenWorld (as it was called then), and https://twitter.com/tlberglund[a random colleague 😉 who was also there] suggested I go and watch some talks at the co-hosted JavaOne conference on a track called "_DevRel_". DevRel, you say? WTF is that? 
+In **March 2017**, I joined Confluent's Business Development team as a _Partner Technology Evangelist_. In October of that year, I spoke at Oracle OpenWorld (as it was called then), and https://twitter.com/tlberglund[a random colleague 😉 who was also there] suggested I go and watch some talks at the co-hosted JavaOne conference on a track called "_DevRel_". DevRel, you say? WTF is that? 
 
 {{< tweet 914626906783453185 >}}
 
@@ -41,9 +40,9 @@ Turns out this was a turning point for my career. I learnt in talks from https:/
 
 ''''
 
-Fast forward a few months to **April 2018** and I'd convinced https://twitter.com/tlberglund[Tim Berglund] (_for it was he, the random colleague who pointed me to the DevRel track at JavaOne_) to take me on as a Developer Advocate in his DevX team at Confluent. Here I cut my teeth as a Developer Advocate learning my trade from Tim, and colleagues https://twitter.com/gamussa[Viktor] and https://twitter.com/riferrei[Ricardo]. I learnt all about building authentic communities from the wonderful https://twitter.com/ale_amurray[Ale Murray], and about DevRel, communities, stream processing, and everything else from https://twitter.com/gwenshap[Gwen Shapira].
+Fast forward a few months to **April 2018**, and I'd convinced https://twitter.com/tlberglund[Tim Berglund] (_for it was he, the random colleague who pointed me to the DevRel track at JavaOne_) to take me on as a Developer Advocate in his DevX team at Confluent. Here I cut my teeth as a Developer Advocate learning my trade from Tim and colleagues https://twitter.com/gamussa[Viktor] and https://twitter.com/riferrei[Ricardo]. I learnt all about building authentic communities from the wonderful https://twitter.com/ale_amurray[Ale Murray], and about DevRel, communities, stream processing, and everything else from https://twitter.com/gwenshap[Gwen Shapira].
 
-But, it's not always just airmiles and smiles. As well as the practical side of the profession—crafting https://talks.rmoff.net/[slides], delivering https://www.youtube.com/playlist?list=PL5T99fPsK7pqp5Vdv8HtKVtwsuyGJEIeu[talks], writing https://www.confluent.io/blog/author/robin-moffatt/[blogs], hacking https://github.com/confluentinc/demo-scene/[code]—I also learnt a lot about the human side of being a Developer Advocate. I wrote about this for two reasons: for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. These blogs are perhaps the ones of which I'm the most proud. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with quite a lot of people judging on the number of people who have taken the time to say to me that they read them and enjoyed them. 
+But it's not always just airmiles and smiles. As well as the practical side of the profession—crafting https://talks.rmoff.net/[slides], delivering https://www.youtube.com/playlist?list=PL5T99fPsK7pqp5Vdv8HtKVtwsuyGJEIeu[talks], writing https://www.confluent.io/blog/author/robin-moffatt/[blogs], hacking https://github.com/confluentinc/demo-scene/[code]—I also learnt a lot about the human side of being a Developer Advocate. I wrote about this for two reasons: for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. These blogs are perhaps the ones of which I'm the proudest. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with many people judging on the number of people who have taken the time to say to me that they read them and enjoyed them. 
 
 * link:/2019/02/09/travelling-for-work-with-kids-at-home/[Travelling for Work, with Kids at Home]
 * link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/[Life as a Developer Advocate, nine months into a pandemic]
