--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ This is the source for https://rmoff.net, built using Hugo and hosted via GitHub
 docker run --rm -it \
   -v $(pwd):/src \
   -p 1313:1313 \
-  klakegg/hugo:0.85.0-asciidoctor-onbuild \
+  klakegg/hugo:0.105.0-asciidoctor-onbuild \
   server --buildFuture --buildDrafts
 ----
 
@@ -23,7 +23,7 @@ git checkout -b my_new_post
 
 docker run --rm -it \
   -v $(pwd):/src \
-  klakegg/hugo:0.85.0-asciidoctor-onbuild \
+  klakegg/hugo:0.105.0-asciidoctor-onbuild \
   new content/post/my_new_post.adoc
 ----
 
@@ -34,16 +34,16 @@ Run this locally to check the state of the local copy.
 [source,bash]
 ----
 mkdir /tmp/hugo_public && \
-docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public klakegg/hugo:0.85.0-asciidoctor-onbuild  --buildFuture --buildDrafts -d /tmp/public && \
+docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public klakegg/hugo:0.105.0-asciidoctor-onbuild  --buildFuture --buildDrafts -d /tmp/public && \
 docker run -v /tmp/hugo_public:/check ghcr.io/untitaker/hyperlink:0.1.26 /check && 
 rm -rf /tmp/hugo_public
 ----
 
 Link checking is also configuring as an action for any PR.
 
-== Broken theme
+== Theme
 
-The theme used (https://github.com/xaprb/story[story]) is no longer maintained, and is broken with the latest version of Hugo (`0.96.0`). It may be broken with earlier versions too (I've not built it for a while). It does work with `0.82.1``.
+The theme used (https://github.com/xaprb/story[story]) is no longer maintained, and needed fixing to work with versions > 0.86. When built, it threw these errors: 
 
 [source,bash]
 ----
@@ -56,4 +56,4 @@ Error: Error building site: failed to render pages: render of "page" failed: "/U
 Built in 1800 ms
 ----
 
-I found this https://discourse.gohugo.io/t/cant-evaluate-field-hugo-in-hugolib-pagestate/37862/3[relevant thread] but don't understand enough about Hugo and its themes to do anything other than hack around…so instead I'm just hard-coding my dependence back to 0.82 and leaving it there. Maybe at some point I'll try out a new theme (yak shaving when I should be doing something else ;-) )
+I fixed it by https://github.com/rmoff/rmoff-blog/commit/cc235ef6f990d85995329da3fe80f62fb1d667c0#diff-67fd70a42c2bf7d56a85104f205d0e19f77f08f5335b21dbbd98ef808cd5f128[removing the `.HugoGenerator` code] and it works just fine now. 
