--- a/content/post/csv-into-kafka-dirty.adoc
+++ b/content/post/csv-into-kafka-dirty.adoc
@@ -311,7 +311,7 @@ Query terminated
 
 A couple of useful suggestions in response to this post, from Simon Aubury: 
 
-{{< twitter 1365480667589435393 >}}
+{{< tweet id="1365480667589435393" user="SimonAubury" >}}
 
 and from `edbond`
 
