--- a/content/post/dataeng_arch.adoc
+++ b/content/post/dataeng_arch.adoc
@@ -63,15 +63,15 @@ image::/images/2022/10/dbt1.png[dbt high-level view]
 
 Another nuance to what I described above is discussed in https://twitter.com/esammer/status/1567343640934232064[this thread] started by https://twitter.com/esammer[Eric Sammer]
 
-{{< tweet 1567343640934232064 >}}
+{{< tweet id="1567343640934232064" user="esammer" >}}
 
 The 💡 statement is this one from https://twitter.com/teej_m/[TJ]
 
-{{< tweet 1567347745387872257 >}}
+{{< tweet id="1567347745387872257" user="teej_m" >}}
 
 TJ also quotes James Densmore from last year: 
 
-{{< tweet 1367204759137103877 >}}
+{{< tweet id="1367204759137103877" user="jamesdensmore" >}}
 
 From this I took the point that ETL/ELT is not *just* about _where_ the work gets executed, but *also* about _what_ gets executed, namely the business logic. By extension it is also about *who* is responsible for it (and by further extension, to whom the supporting tools need to be targetted at supporting). 
 
