--- a/content/post/kafka-data-profiling.adoc
+++ b/content/post/kafka-data-profiling.adoc
@@ -57,7 +57,7 @@ The fields may well be nested - use `g(` in visidata to expand them.
 
 == Using it with Confluent Cloud
 
-{{< twitter 1367510560011669509 >}}
+{{< tweet id="1367510560011669509" user="vcazacov" >}}
 
 Here you go: 
 
