--- a/content/post/ksl22_run.adoc
+++ b/content/post/ksl22_run.adoc
@@ -19,7 +19,7 @@ categories:
 
 <!--more-->
 
-{{< twitter 1179047181891883008 >}}
+{{< tweet id="1179047181891883008" user="rmoff" >}}
 
 == Who? What? Where? When? 
 
