--- a/content/post/learning-go-part1.adoc
+++ b/content/post/learning-go-part1.adoc
@@ -51,11 +51,11 @@ ____
 
 I also got some useful feedback from people on Twitter: 
 
-{{< tweet 1275777088268709889 >}}
+{{< tweet id="1275777088268709889" user="rmoff" >}}
 
-{{< tweet 1275842242972803072 >}}
+{{< tweet id="1275842242972803072" user="ewencp" >}}
 
-{{< tweet 1275833679412068352 >}}
+{{< tweet id="1275833679412068352" user="RaySaltrelli" >}}
 
 '''
 == 📺 More Episodes…
