--- a/content/post/scheduling-hugo-builds-on-githubpages.adoc
+++ b/content/post/scheduling-hugo-builds-on-githubpages.adoc
@@ -130,4 +130,4 @@ image::/images/2020/12/actions.png[]
 
 Gunnar noted that he's evolved his build from what he originally published, as well as setting up preview builds for PRs which is a neat idea.
 
-{{< twitter 1340619722887483394 >}}
+{{< tweet id="1340619722887483394" user="gunnarmorling" >}}
