--- a/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
+++ b/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
@@ -118,7 +118,7 @@ image::/images/2020/01/ks01.png[]
 
 This from https://twitter.com/gitbisect/[Jason Yee] should be emblazoned on every CfP submission page everywhere: 
 
-{{< twitter 1387438457505533960 >}}
+{{< tweet id="1387438457505533960" user="gitbisect" >}}
 
 == Thoughts? Questions? 
 
