--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -11,6 +11,7 @@ categories:
 - LakeFS
 ---
 
+:figure-caption!:
 :source-highlighter: rouge
 :icons: font
 :rouge-css: style
@@ -18,25 +19,30 @@ categories:
 
 As we enter December and 2022 draws to a close, so does a significant chapter in my working career—later this month I'll be leaving Confluent and onto pastures new. 
 
-It's nearly six years since link:/2017/03/10/time-for-a-change/[I wrote] one of these blog entries, and as well as sharing what I'll be working on next (and why), I also want to reflect on how much I've benefited from my time at Confluent and particularly the people with whom I worked. 
+It's nearly six years since I wrote one of link:/2017/03/10/time-for-a-change/[these blog entries], and as well as sharing what I'll be working on next (and why), I also want to reflect on how much I've benefited from my time at Confluent and particularly the people with whom I worked. 
 
 <!--more-->
 
 ## Looking Forwards
 
+
+In January I'm going to be joining https://lakefs.io/[*LakeFS*] as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. 
+
+._What's a stuffed toy got to do with this? The Axolotl is https://docs.lakefs.io/faq.html#6-what-inspired-the-lakefs-logo[LakeFS' mascot] and excellent https://twitter.com/gAmUssA/status/1577298515402924033[conference swag] :D_
+[#axolotl]
 image::/images/2022/12/DSCF8441.jpeg[An Axolotl on a rock near Ilkley's famous Cow and Calf rocks]
 
-I'm going to be joining https://lakefs.io/[*LakeFS*] in January as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. LakeFS is something I've link:/2022/09/14/data-engineering-in-2022-storage-and-access/#_git_for_data_with_lakefs[written about recently] (link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[twice]), and I'm excited to work with it and the surrounding data engineering ecosystem. How we as data engineers should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use is something that's interested me for a long time. Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool to integrate with source control] (https://www.youtube.com/watch?v=Kpbbb-pa2gU[video]), and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. 
+LakeFS is something I've link:/2022/09/14/data-engineering-in-2022-storage-and-access/#_git_for_data_with_lakefs[written about recently] (link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[twice]), and I'm excited to get the opportunity to work with it and the surrounding data engineering ecosystem. How we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use is something that's interested me for a long time. Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool to integrate with source control] (https://www.youtube.com/watch?v=Kpbbb-pa2gU[video]), and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. 
 
-_What's a stuffed toy got to do with this? The Axolotl is https://docs.lakefs.io/faq.html#6-what-inspired-the-lakefs-logo[LakeFS' mascot] and excellent https://twitter.com/gAmUssA/status/1577298515402924033[conference swag] :D_
+I was going to write more on how I chose LakeFS, but then I realised that I couldn't write it better than https://lakefs.io/blog/in-the-realm-of-the-new-open-data-stack-joining-the-lakefs-adventure/[Adi had already]. I particularly like the concept of _Ikigai_ that I learnt about from this. 
 
 ## Looking Backwards 
 
-I'm leaving Confluent with nothing but positive vibes about the company—and quite a feeling of sadness especially since it's where I first officially became a Developer Advocate, as well as my first start-up experience. 
+I'm leaving Confluent with nothing but positive vibes about the company—and quite a feeling of sadness. Confluent was where I officially became a Developer Advocate, and was also my first start-up experience. 
 
 In **March 2017**, I joined Confluent's Business Development team as a _Partner Technology Evangelist_. In October of that year, I spoke at Oracle OpenWorld (as it was called then), and https://twitter.com/tlberglund[a random colleague 😉 who was also there] suggested I go and watch some talks at the co-hosted JavaOne conference on a track called "_DevRel_". DevRel, you say? WTF is that? 
 
-{{< tweet id="914626906783453185" user="rmoff" >}}
+image::/images/2022/12/tweet.png[@rmoff on Twitter on 12:03 AM Oct 2, 2017: Apparently this has been a thing for years, but #TIL the term DevRel.]
 
 Turns out this was a turning point for my career. I learnt in talks from https://twitter.com/TheSteve0[Steve Pousty] and https://twitter.com/jbaruch[Baruch Sadogursky] that DevRel was a profession in itself, not just a sideline to try and cram in alongside a day job as I'd been doing for the previous seven years. 
 
