--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -25,16 +25,15 @@ It's nearly six years since I wrote one of link:/2017/03/10/time-for-a-change/[t
 
 ## Looking Forwards
 
-
 In January I'm going to be joining https://lakefs.io/[*LakeFS*] as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. 
 
 ._What's a stuffed toy got to do with this? The Axolotl is https://docs.lakefs.io/faq.html#6-what-inspired-the-lakefs-logo[LakeFS' mascot] and excellent https://twitter.com/gAmUssA/status/1577298515402924033[conference swag] :D_
 [#axolotl]
 image::/images/2022/12/DSCF8441.jpeg[An Axolotl on a rock near Ilkley's famous Cow and Calf rocks]
 
-LakeFS is something I've link:/2022/09/14/data-engineering-in-2022-storage-and-access/#_git_for_data_with_lakefs[written about recently] (link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[twice]), and I'm excited to get the opportunity to work with it and the surrounding data engineering ecosystem. How we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use is something that's interested me for a long time. Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool to integrate with source control] (https://www.youtube.com/watch?v=Kpbbb-pa2gU[video]), and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. 
+https://lakefs.io/[LakeFS] is an open-source tool that provides "git for data". Just as you would branch code to go and try something out instead of writing directly to production, you can do the same with your data. LakeFS uses copy-on-write so that mountain (or molehill) of data you've got doesn't get duplicated each time you need a new version of it. This is just scratching the surface of what LakeFS can do, and I'm excited to start on a new adventure learning it inside and out—and working with people in the data engineering community to understand how it can work best for them too. I had a bit of a look at it link:/categories/lakefs/[previously] and can't wait to really get my teeth into it 😁. 
 
-I was going to write more on how I chose LakeFS, but then I realised that I couldn't write it better than https://lakefs.io/blog/in-the-realm-of-the-new-open-data-stack-joining-the-lakefs-adventure/[Adi had already]. I particularly like the concept of _Ikigai_ that I learnt about from this. 
+Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool] https://www.youtube.com/watch?v=Kpbbb-pa2gU[to integrate with source control], and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. The data engineering space is a fast-moving one with new releases arriving all the time to help us process data faster, bigger, smarter. But one of the things that I've seen that's really missing from this is a serious consideration of how we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use. Things like version control and CI/CD to build truly resilient and repeatable deployments. 
 
 ## Looking Backwards 
 
