--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -31,9 +31,10 @@ In January I'm going to be joining https://lakefs.io/[*LakeFS*] as a Principal D
 [#axolotl]
 image::/images/2022/12/DSCF8441.jpeg[An Axolotl on a rock near Ilkley's famous Cow and Calf rocks]
 
+Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool] https://www.youtube.com/watch?v=Kpbbb-pa2gU[to integrate with source control], and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. The data engineering space is a fast-moving one, with new releases arriving all the time to help us process data faster, bigger, smarter. But one of the things that I've seen that needs to be added to this is a serious consideration of how we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use. Things like version control and CI/CD to build truly resilient and repeatable deployments. 
+
 https://lakefs.io/[LakeFS] is an open-source tool that provides "git for data". Just as you would branch code to go and try something out instead of writing directly to production, you can do the same with your data. LakeFS uses copy-on-write so that mountain (or molehill) of data you've got doesn't get duplicated each time you need a new version of it. This is just scratching the surface of what LakeFS can do, and I'm excited to start on a new adventure learning it inside and out—and working with people in the data engineering community to understand how it can work best for them too. I had a bit of a look at it link:/categories/lakefs/[previously] and can't wait to really get my teeth into it 😁. 
 
-Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool] https://www.youtube.com/watch?v=Kpbbb-pa2gU[to integrate with source control], and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. The data engineering space is a fast-moving one with new releases arriving all the time to help us process data faster, bigger, smarter. But one of the things that I've seen that's really missing from this is a serious consideration of how we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use. Things like version control and CI/CD to build truly resilient and repeatable deployments. 
 
 ## Looking Backwards 
 
