--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -19,22 +19,9 @@ categories:
 
 As we enter December and 2022 draws to a close, so does a significant chapter in my working career—later this month I'll be leaving Confluent and onto pastures new. 
 
-It's nearly six years since I wrote one of link:/2017/03/10/time-for-a-change/[these blog entries], and as well as sharing what I'll be working on next (and why), I also want to reflect on how much I've benefited from my time at Confluent and particularly the people with whom I worked. 
+It's nearly six years since I wrote a link:/2017/03/10/time-for-a-change/['moving on' blog entry], and as well as sharing what I'll be working on next (and why), I also want to reflect on how much I've benefited from my time at Confluent and particularly the people with whom I worked. 
 
 <!--more-->
-
-## Looking Forwards
-
-In January I'm going to be joining https://lakefs.io/[*LakeFS*] as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. 
-
-._What's a stuffed toy got to do with this? The Axolotl is https://docs.lakefs.io/faq.html#6-what-inspired-the-lakefs-logo[LakeFS' mascot] and excellent https://twitter.com/gAmUssA/status/1577298515402924033[conference swag] :D_
-[#axolotl]
-image::/images/2022/12/DSCF8441.jpeg[An Axolotl on a rock near Ilkley's famous Cow and Calf rocks]
-
-Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool] https://www.youtube.com/watch?v=Kpbbb-pa2gU[to integrate with source control], and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. The data engineering space is a fast-moving one, with new releases arriving all the time to help us process data faster, bigger, smarter. But one of the things that I've seen that needs to be added to this is a serious consideration of how we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use. Things like version control and CI/CD to build truly resilient and repeatable deployments. 
-
-https://lakefs.io/[LakeFS] is an open-source tool that provides "git for data". Just as you would branch code to go and try something out instead of writing directly to production, you can do the same with your data. LakeFS uses copy-on-write so that mountain (or molehill) of data you've got doesn't get duplicated each time you need a new version of it. This is just scratching the surface of what LakeFS can do, and I'm excited to start on a new adventure learning it inside and out—and working with people in the data engineering community to understand how it can work best for them too. I had a bit of a look at it link:/categories/lakefs/[previously] and can't wait to really get my teeth into it 😁. 
-
 
 ## Looking Backwards 
 
@@ -50,7 +37,7 @@ Turns out this was a turning point for my career. I learnt in talks from https:/
 
 Fast forward a few months to **April 2018**, and I'd convinced https://twitter.com/tlberglund[Tim Berglund] (_for it was he, the random colleague who pointed me to the DevRel track at JavaOne_) to take me on as a Developer Advocate in his DevX team at Confluent. Here I cut my teeth as a Developer Advocate learning my trade from Tim and colleagues https://twitter.com/gamussa[Viktor] and https://twitter.com/riferrei[Ricardo]. I learnt all about building authentic communities from the wonderful https://twitter.com/ale_amurray[Ale Murray], and about DevRel, communities, stream processing, and everything else from https://twitter.com/gwenshap[Gwen Shapira].
 
-But it's not always just airmiles and smiles. As well as the practical side of the profession—crafting https://talks.rmoff.net/[slides], delivering https://www.youtube.com/playlist?list=PL5T99fPsK7pqp5Vdv8HtKVtwsuyGJEIeu[talks], writing https://www.confluent.io/blog/author/robin-moffatt/[blogs], hacking https://github.com/confluentinc/demo-scene/[code], and https://twitter.com/rmoff/status/1587382202781913089[shitposting]—I also learnt a lot about the human side of being a Developer Advocate. I wrote about this for two reasons: for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. These blogs are perhaps the ones of which I'm the proudest. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with many people judging on the number of people who have taken the time to say to me that they read them and enjoyed them. 
+But it's not always just airmiles and smiles. As well as the practical side of the profession—crafting https://talks.rmoff.net/[slides], delivering https://www.youtube.com/playlist?list=PL5T99fPsK7pqp5Vdv8HtKVtwsuyGJEIeu[talks], writing https://www.confluent.io/blog/author/robin-moffatt/[blogs], hacking https://github.com/confluentinc/demo-scene/[code], and https://twitter.com/rmoff/status/1587382202781913089[shitposting]—I also learnt a lot about the human side of being a Developer Advocate. I wrote about this for two reasons: for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. These blogs are perhaps the ones of which I'm the proudest. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with many people judging by the number of folk who have told me that they enjoyed them:
 
 * link:/2019/02/09/travelling-for-work-with-kids-at-home/[Travelling for Work, with Kids at Home]
 * link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/[Life as a Developer Advocate, nine months into a pandemic]
@@ -63,6 +50,21 @@ In a similar vein but a bit more practical, here are a few about being a Develop
 
 (_there are a bunch more link:/categories/devrel/[DevRel posts on this blog], including now this one which gets a bit recursive 😉_)
 
+
+## Looking Forwards
+
+In January I'm going to be joining https://lakefs.io/[*LakeFS*] as a Principal DevEx Engineer, working on a great team led by https://www.linkedin.com/in/polak-adi[Adi Polak]. 
+
+._What's a stuffed toy got to do with this? The Axolotl is https://docs.lakefs.io/faq.html#6-what-inspired-the-lakefs-logo[LakeFS' mascot] and excellent https://twitter.com/gAmUssA/status/1577298515402924033[conference swag] :D_
+[#axolotl]
+image::/images/2022/12/DSCF8441.jpeg[An Axolotl on a rock near Ilkley's famous Cow and Calf rocks]
+
+### Why LakeFS? 
+
+Back in 2016 in my previous role I spent a lot of time researching https://www.rittmanmead.com/blog/2016/12/source-control-and-automated-code-deployment-options-for-obiee/[how to get Oracle's BI tool] https://www.youtube.com/watch?v=Kpbbb-pa2gU[to integrate with source control], and I'm looking forward to taking a similarly rigorous approach to the thing that's at the heart of everything we work with today: data. The data engineering space is a fast-moving one, with new releases arriving all the time to help us process data faster, bigger, smarter. But one of the things that I've seen that needs to be added to this is a serious consideration of how we, as data engineers, should adopt and embrace the kind of practices that software engineers would be simply embarrassed not to use. Things like version control and CI/CD to build truly resilient and repeatable deployments. 
+
+https://lakefs.io/[LakeFS] is an open-source tool that provides "git for data". Just as you would branch code to go and try something out instead of writing directly to production, you can do the same with your data. LakeFS uses copy-on-write so that the mountain (or molehill) of data you've got doesn't get duplicated each time you need a new version of it. This is just scratching the surface of what LakeFS can do, and I'm excited to start on a new adventure learning it inside and out—and working with people in the data engineering community to understand how it can work best for them too. I had a bit of a look at it link:/categories/lakefs/[previously] and can't wait to really get my teeth into it 😁. 
+
 ## Parting Thoughts: Community, FTW
 
 Developer Advocacy is not just +++<del>shitposting and memes</del>+++ speaking at conferences and writing blogs. It's also engaging with the community, helping developers, and more. Bringing this all together for me in late 2019 was the opportunity to join the Kafka Summit program committee, followed by becoming the chair of the program committee two years later.
@@ -71,4 +73,4 @@ image::/images/2022/12/ksl.jpg[]
 
 Being on the program committee brings together lots of facets of life as a Developer Advocate. You get to work with the community, with other speakers, you get to influence how a conference is delivered, and pair all of that with a close understanding of trends and interests in the community and beyond. 
 
-One of the most rewarding and most important aspects of my time at Confluent has been working with the Community. Whether at conferences, meetups, or online, I've made good friends, I've learnt lots - and hopefully shared a fair bit of knowledge back too. What I really like about a community is that it's not got hard edges; communities overlap and come together in different guises. That is to say, I may not be working at Confluent but I will still be keeping in close touch with the Apache Kafka community, and hope to see some of y'all over in the broader data engineering and particularly the LakeFS community too :) 
+One of the most rewarding and most important aspects of my time at Confluent has been working with the Community. Whether at conferences, meetups, or online, I've made good friends, I've learnt lots - and hopefully shared a fair bit of knowledge back too. What I really like about a community is that it's not got hard edges; communities overlap and come together in different guises. That is to say, I may not be working at Confluent but I will still be keeping in close touch with the Apache Kafka community, and hope to see some of y'all over in the broader data engineering and particularly the LakeFS community too 😄.
