--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,8 @@
 
 image::https://github.com/rmoff/rmoff-blog/workflows/GitHub%20Pages/badge.svg?branch=master[]
 
+[![Check Links](https://github.com/rmoff/rmoff-blog/actions/workflows/pr_check_links.yaml/badge.svg)](https://github.com/rmoff/rmoff-blog/actions/workflows/pr_check_links.yaml)
+
 This is the source for https://rmoff.net, built using Hugo and hosted via GitHub pages.
 
 == Running locally
