--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = rmoff's Blog (source)
 
-image::https://github.com/rmoff/rmoff-blog/workflows/GitHub%20Pages/badge.svg?branch=master[] 
+image::https://github.com/rmoff/rmoff-blog/actions/workflows/gh-pages-deployment.yml/badge.svg[]
 image::https://github.com/rmoff/rmoff-blog/actions/workflows/pr_check_links.yaml/badge.svg[]
 
 This is the source for https://rmoff.net, built using Hugo and hosted via GitHub pages.
