--- a/content/post/sdh.adoc
+++ b/content/post/sdh.adoc
@@ -132,7 +132,8 @@ And to recap, all that I needed to do to hijack subdomains was:
 
 NOTE: My thanks to https://www.linkedin.com/in/oliverhookins/[Oliver Hookins] for his rapid help in diagnosing and explaining this issue.
 
-_I have, obviously, removed the wildcard DNS record from `rmoff.info` before publishing this, so don't even try 😝_ \
+_I have, obviously, removed the wildcard DNS record from `rmoff.info` before publishing this, so don't even try 😝_
+
 _I left in place an A record just for `spammy-crap` so that you can see the domain->GitHub Pages resolution in practice._
 
 image::/images/2024/01/dns0.webp[Wait, It's All DNS? Always Has Been]
