--- a/content/post/antora-2.adoc
+++ b/content/post/antora-2.adoc
@@ -40,7 +40,7 @@ The docs content lives in `code_repo` under `/docs`. The actual build and deploy
 
 image::/images/2024/01/buildanddeploy.webp[Diagram of the build and deploy process]
 
-* For *docs changes*, when a change is pushed to `main` on `code_repo` that includes a file under `/docs/`, the `docs-trigger-deploy.yml` workflow runs. This in turn triggers the `cloudflare.yaml` workflow on the `docs-platform` repository. 
+* For *docs changes*, when a change is pushed to `main` on `code_repo` that includes a file under `/docs/`, the `docs-trigger-deploy.yaml` workflow runs. This in turn triggers the `cloudflare.yaml` workflow on the `docs-platform` repository. 
 * For a *platform change* the `cloudflare.yaml` workflow on the `docs-platform` repository will run directly.
 
 === PR Preview builds
