--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -31,9 +31,7 @@ At Confluent I've been working with Apache Kafka and diving deep into the world 
 
 Herewith that itch being scratched… 
 
-+++
-<div class="tenor-gif-embed" data-postid="15016547" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/happy-scratch-head-cat-gif-15016547">Happy Scratch Head GIF</a>from <a href="https://tenor.com/search/happy-gifs">Happy GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-+++
+image::/images/2022/09/scratch.webp[]
 
 ## How It Started
 
