Add link to AWS Amplify scripts

--- a/content/post/antora-2.adoc
+++ b/content/post/antora-2.adoc
@@ -9,6 +9,7 @@ categories:
 - Antora
 - GitHub
 - Cloudflare
+- AWS Amplify
 ---
 
 :source-highlighter: rouge
@@ -16,7 +17,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-At https://decodable.co[Decodable] we're migrating our docs platform onto https://antora.org/[Antora]. I wrote link:/2023/12/19/deploying-antora-with-github-actions-and-a-private-github-repo/[previously] about my escapades in getting cross-repository authentication working using https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#types-of-personal-access-tokens[Private Access Tokens] (PAT). These are fine for just a single user, but they're tied to that user, which isn't a good practice for deployment in this case.
+At https://decodable.co[Decodable] we migrated our docs platform onto https://antora.org/[Antora]. I wrote link:/2023/12/19/deploying-antora-with-github-actions-and-a-private-github-repo/[previously] about my escapades in getting cross-repository authentication working using https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#types-of-personal-access-tokens[Private Access Tokens] (PAT). These are fine for just a single user, but they're tied to that user, which isn't a good practice for deployment in this case.
 
 In this article I'll show how to use GitHub Apps and Installation Access Tokens (IAT) instead, and go into some detail on how we've deployed Antora. Our GitHub repositories are private which makes it extra-gnarly.
 
@@ -188,3 +189,11 @@ and the following repository variable
 | Key             | Value
 | `CLOUDFLARE_ACCOUNT_ID` | Cloudflare Account ID
 |===============================================================================================================================
+
+== Addendum: Deploying Antora using AWS Amplify and GitHub Workflows
+
+For `$REASONS` we ended up using AWS Amplify. You can find the build scripts https://gist.github.com/rmoff/867322d0ff0659084981d786d9048231[here]. There are three scripts: 
+
+1. Preview deployment (triggered by a PR creation)
+2. Live deployment (triggered by a merge to `main`)
+3. Teardown preview (triggered by a PR being closed)
