--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,9 @@
 = rmoff's Blog (source)
 
-image::https://github.com/rmoff/rmoff-blog/actions/workflows/gh-pages-deployment.yml/badge.svg[]
-image::https://github.com/rmoff/rmoff-blog/actions/workflows/pr_check_links.yaml/badge.svg[]
+image::https://github.com/rmoff/rmoff-blog/actions/workflows/gh-pages-deployment.yml/badge.svg[Build and Deploy to GitHub Pages,link=https://github.com/rmoff/rmoff-blog/actions/workflows/gh-pages-deployment.yml]
+
+image::https://github.com/rmoff/rmoff-blog/actions/workflows/external_link_check.yml/badge.svg?branch=main&event=schedule[Check External Links,link=https://github.com/rmoff/rmoff-blog/actions/workflows/external_link_check.yml]
+
 
 This is the source for https://rmoff.net, built using Hugo and hosted via GitHub pages.
 
