--- a/content/post/ksl24-flink.adoc
+++ b/content/post/ksl24-flink.adoc
@@ -38,7 +38,7 @@ Here's a list of all the Flink talks, including the talk, time, and speaker. You
 |Tue 2:00 PM
 |Breakout Room 2
 
-|link:https://events.bizzabo.com/559905/agenda/session/1284897[🐲 Here be Dragons^H^H Stacktraces — Flink SQL for Non-Java Developers]
+|link:https://events.bizzabo.com/559905/agenda/session/1284897[🐲 Here be +++<del>+++Dragons+++</del>+++ Stacktraces — Flink SQL for Non-Java Developers]
 |https://x.com/rmoff[Robin Moffatt]
 |Tue 3:30 PM
 |Breakout Room 2
