--- a/content/post/ksl24_run.adoc
+++ b/content/post/ksl24_run.adoc
@@ -32,7 +32,7 @@ We'll **meet at 07:00 GMT** in the carpark in front of the hotel. That'll give u
 <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3203732932395497896" data-full-width="true" data-style="standard" data-terrain="2d" data-club-id="1039355" data-from-embed="false"></div><script src="https://strava-embeds.com/embed.js"></script>
 ++++
 
-Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you prefer. You can https://www.strava.com/clubs/1039355/group_events/1146993[download the route] to follow at your leisure. In fact, it's a good idea to do so because this is not an organised event, so it's your responsibility not to get lost :-D
+Go at your own pace; this isn't a race. You can run, or walk. Or skip, if you prefer. You can https://strava.app.link/IjwMA4dI4Hb[download the route] to follow at your leisure. In fact, it's a good idea to do so because this is not an organised event, so it's your responsibility not to get lost :-D
 
 If you Strava, feel free to join the https://www.strava.com/clubs/1039355[Strava Club].
 
