use vhs instead of asciinema

--- a/content/post/aws-pager.adoc
+++ b/content/post/aws-pager.adoc
@@ -15,7 +15,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-After a break from using AWS I had reason to reacquaint myself with it again today, and did so via the CLI. The AWS CLI is pretty intuitive and has a good helptext system, but one thing that kept frustrasting me was that after closing the help text, the screen cleared—so I couldn't copy the syntax out to use in my command!
+After a break from using AWS I had reason to reacquaint myself with it again today, and did so via the CLI. The https://aws.amazon.com/cli/[AWS CLI] is pretty intuitive and has a good helptext system, but one thing that kept frustrasting me was that after closing the help text, the screen cleared—so I couldn't copy the syntax out to use in my command!
 
 The same thing happened when I ran a command that returned output - the screen cleared.
 
@@ -25,9 +25,7 @@ Here's how to fix either, or both, of these
 
 == AWS CLI help text disappears when closed
 
-++++
-<script src="https://asciinema.org/a/SvT2Ncm92T49vGMFcX5R6R7Ct.js" id="asciicast-656551" async="true"></script>
-++++
+video::/images/2024/04/help0.mp4[]
 
 The fix: set `MANPAGER` (https://ashley.raiteri.net/stop-aws-cli-help-command-from-clearing-screen/[h/t])
 
@@ -36,9 +34,7 @@ The fix: set `MANPAGER` (https://ashley.raiteri.net/stop-aws-cli-help-command-fr
 export MANPAGER='less -isXF'
 ----
 
-++++
-<script src="https://asciinema.org/a/MuEdcL9wSLSU6eFJKYr2mwcoQ.js" id="asciicast-656553" async="true"></script>
-++++
+video::/images/2024/04/help1.mp4[]
 
 == AWS CLI command output disappears when closed
 
@@ -46,9 +42,7 @@ Similar to the above, but a different solution, which confuses the issue when Go
 
 You run a command, you want to refer to the output, but as soon as you return to the command prompt it's gone 🤨
 
-++++
-<script src="https://asciinema.org/a/HeeDf3YOTO64sHzg7SyJBvoZf.js" id="asciicast-656555" async="true"></script>
-++++
+video::/images/2024/04/help2.mp4[]
 
 The fix: make sure that `AWS_PAGER` is set to the correct invocation of `less`. Or other options, including setting `--no-cli-pager` argument. This https://docs.aws.amazon.com/cli/latest/userguide/cli-usage-pagination.html#cli-usage-pagination-clientside[is documented] if you want to read more.
 
@@ -64,6 +58,4 @@ or simply
 unset AWS_PAGER
 ----
 
-++++
-<script src="https://asciinema.org/a/K5bCE9wXJDN5Bid6GHeWGrM8D.js" id="asciicast-656557" async="true"></script>
-++++
+video::/images/2024/04/help3.mp4[]
