Add reference to phishing usage

--- a/content/post/ngrok-dns.adoc
+++ b/content/post/ngrok-dns.adoc
@@ -201,7 +201,7 @@ In the logs that NextDNS provides I can see:
 
 image::/images/2024/05/nextdns01.webp[NextDNS screenshot showing DNS resolution for ngrok blocked by Threat Intelligence Feeds blocklist]
 
-As well as blocking crap like ads and tracking domains, NextDNS also blocks DNS resolutions for sites that are deemed nefarious. It looks like ngrok ended up on one of https://www.cloudflare.com/learning/security/glossary/threat-intelligence-feed/[these lists] - probably because ngrok could be used to serve phishing websites etc. After adding `*.ngrok.io` to my NextDNS Allowlist I got this:
+As well as blocking crap like ads and tracking domains, NextDNS also blocks DNS resolutions for sites that are deemed nefarious. It looks like ngrok ended up on one of https://www.cloudflare.com/learning/security/glossary/threat-intelligence-feed/[these lists] - probably because ngrok is sometimes abused to https://cyble.com/blog/ngrok-platform-abused-by-hackers-to-deliver-a-new-wave-of-phishing-attacks/[serve phishing websites] etc. After adding `*.ngrok.io` to my NextDNS Allowlist I got this:
 
 [source,bash]
 ----
