Add dig trace explanation

--- a/content/post/ngrok-dns.adoc
+++ b/content/post/ngrok-dns.adoc
@@ -312,4 +312,6 @@ L YKIg/Y0nryoSZq/wUkwweFvcrr0UrMeH0f6iR5rfaxrrjPcL7E8UrNRU 9aHjHg== from server 
 A 18.158.249.75 from server 205.251.192.146 in 19 ms.
 ----
 
-I'd love to hear from you if you can explain what's happening with this :)
++++<del>+++I'd love to hear from you if you can explain what's happening with this :)+++</del>+++
+
+_Thanks to Bill Weiss, and to https://phpc.social/@adduc[John Long] who explained the `dig +trace` mystery to me. You can find a good explanation https://superuser.com/questions/715632/how-does-dig-trace-actually-work[here]_.
