--- a/content/post/kafka_summit_runwalk.adoc
+++ b/content/post/kafka_summit_runwalk.adoc
@@ -6,6 +6,7 @@ thumbnail: "/images/2019/09/IMG_6357.jpg"
 categories:
 - Kafka Summit
 - Running
+- 5k run/walk
 ---
 
 Coming to Kafka Summit in San Francisco next week? Inspired by https://www.facebook.com/oraclesqldev/photos/gm.1401265536847886/1228813493825348/?type=3&theater[similar events] at Oracle OpenWorld in past years, I'm proposing an unofficial run (or walk) across the GoldenGate bridge on the morning of Tuesday 1st October. We should be up and out and back in plenty of time to still attend the morning keynotes. Some people will run, some may prefer to walk, it's open to everyone :) 
